--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>Services</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./assets/css/cssreset.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap-grid.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
